--- a/nctu-hw/group_vars/nfs/vars.yml
+++ b/nctu-hw/group_vars/nfs/vars.yml
@@ -1,29 +1,36 @@
 ---
 nfs_exports:
-  - export: /exports/net/data
-    mnt: /net/data
-  - export: /exports/net/home
-    mnt: /net/home
+  # - export: /exports/net/data
+  #   mnt: /net/data
+  # - export: /exports/net/home
+  #   mnt: /net/home
+  - export: /exports/vol/home
+    mnt: /vol/home
   - export: /exports/vol/web_hosting
     mnt: /vol/web_hosting
 
 nfs_shraes:
   - path: "/vol/web_hosting"
-    # owner: "vagrant"
     nfsshares:
-      - "-maproot=nobody -network=10.113.0.1/24"
+      - "-maproot=0 -network localhost 10.113.0.2"
 
-  - path: "/net/home/nisuser1"
+  - path: "/vol/home"
     nfsshares:
-      - "-maproot=nobody -ro -network 10.113.0.1/24"
+      - "-maproot=nobody -network 10.113.0.1/24"
 
-  - path: "/net/data/1"
-    nfsshares:
-      - "-maproot=nobody -ro -network 10.113.0.1/32"
+  # # - path: "/net/home/nisuser1"
+  # - path: "/vol/home/nisuser1"
+  #   nfsshares:
+  #     - "-maproot=nobody -ro -network 10.113.0.1/24"
 
-  - path: "/net/home/nisstu1"
-    nfsshares:
-      - "-maproot=nobody -network 10.113.0.1/32"
+  # # - path: "/net/data/1"
+  # #   nfsshares:
+  # #     - "-maproot=nobody -ro -network 10.113.0.1/32"
+
+  # # - path: "/net/home/nisstu1"
+  # - path: "/vol/home/nisstu1"
+  #   nfsshares:
+  #     - "-maproot=nobody -network 10.113.0.1/32"
 
 pureftpd_tls_certificate_dir: /etc/ssl/private
 pureftpd_tls_certificate_pem: "{{ pureftpd_tls_certificate_dir }}/pure-ftpd.pem"
