feat(HW4 Web server): ✨ 添加 Web socket 服務
添加 2020 sa HW4-WebSocket 之作業實作, 目前 web socket server 需要手動執行, 需參照 playbook web-server.yml. 另外有修改 nginx 以將 hsts 掉全域設定, 否則無法使用 web scoket without tls.

--- a/nctu-hw/provisioner/Vagrantfile
+++ b/nctu-hw/provisioner/Vagrantfile
@@ -46,7 +46,7 @@ Vagrant.configure("2") do |config|
 		end
 	end
 
-	# 因為作業需求, 請在 /etc/hosts 添加 10.113.0.2	www.1.nctu.cs
+	# 因為作業需求, 請在 /etc/hosts 添加 10.113.0.2	www.1.nctu.cs 1_ws.nctu.cs 1.nctu.cs
 	config.vm.define "www" do |www|
 		www.vm.hostname = "www.1.nctu.cs"
 		www.vm.define vm_name = "WWW01-NCTU-CS"
