--- a/nctu-hw/plays/web-server.yml
+++ b/nctu-hw/plays/web-server.yml
@@ -76,6 +76,7 @@
         - /home/www/public_html/ip-access
         - /home/www/private_html/secret
         - /var/www/app
+        - /var/www/wsdemo
 
   roles:
     - role: criecm.mariadb
@@ -101,32 +102,6 @@
 
     - role: geerlingguy.nginx
       nginx_server_tokens: "off"
-      nginx_extra_http_options: |-
-        add_header Set-Cookie HttpOnly;
-        add_header X-Frame-Options SAMEORIGIN;
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header Referrer-Policy strict-origin-when-cross-origin;
-        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline';";
-        add_header Strict-Transport-Security "max-age=31536000;includeSubDomains";
-
-        map $http_origin $allow_origin {
-          ~^https?://(.*\.)?.nctu.cs(:\d+)?$ $http_origin;
-          default "";
-        }
-        add_header Access-Control-Allow-Origin $allow_origin;
-
-        ssl_certificate     {{ openssl_remote_private_dir }}/{{ openssl_name }}.crt;
-        ssl_certificate_key {{ openssl_remote_private_dir }}/{{ openssl_name }}.key;
-        ssl_protocols       TLSv1.2 TLSv1.3;
-        ssl_ciphers         ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers off;
-
-        server {
-          listen         80;
-          return 301 https://$host$request_uri;
-        }
-
       nginx_vhosts:
         - listen: "443 ssl http2"
           server_name: "{{ openssl_name }}"
@@ -135,10 +110,24 @@
           state: present
           filename: "{{ openssl_name }}.conf"
           extra_parameters: |-
+            add_header Set-Cookie HttpOnly;
+            add_header X-Frame-Options SAMEORIGIN;
+            add_header X-Content-Type-Options nosniff;
+            add_header X-XSS-Protection "1; mode=block";
+            add_header Referrer-Policy strict-origin-when-cross-origin;
+            add_header Content-Security-Policy "default-src 'self' 'unsafe-inline';";
+            add_header Strict-Transport-Security "max-age=31536000;includeSubDomains";
+
             add_header Allow "GET, POST, HEAD, OPTIONS" always;
             if ( $request_method !~ ^(GET|HEAD|POST|OPTIONS)$ ) {
               return 405;
             }
+
+            ssl_certificate     {{ openssl_remote_private_dir }}/{{ openssl_name }}.crt;
+            ssl_certificate_key {{ openssl_remote_private_dir }}/{{ openssl_name }}.key;
+            ssl_protocols       TLSv1.2 TLSv1.3;
+            ssl_ciphers         ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+            ssl_prefer_server_ciphers off;
 
             location ~ "info-\d{1,3}\.php$" {
               root /var/www;
@@ -199,6 +188,12 @@
               return 405;
             }
 
+            ssl_certificate     {{ openssl_remote_private_dir }}/{{ openssl_name }}.crt;
+            ssl_certificate_key {{ openssl_remote_private_dir }}/{{ openssl_name }}.key;
+            ssl_protocols       TLSv1.2 TLSv1.3;
+            ssl_ciphers         ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+            ssl_prefer_server_ciphers off;
+
             location /private {
               allow 10.113.0.1/31;
               deny all;
@@ -206,6 +201,71 @@
               auth_basic_user_file /usr/local/etc/nginx/.htpasswd;
               alias /home/www/private_html/secret;
               try_files $uri $uri/ =404;
+            }
+
+        - listen: "80"
+          server_name: "1_ws.nctu.cs"
+          root: /var/www/wsdemo
+          index: "index.html"
+          state: present
+          filename: "1_ws.nctu.cs.conf"
+          extra_parameters: |-
+            add_header 'Access-Control-Allow-Origin' 'http://1_ws.nctu.cs';
+            add_header 'Access-Control-Allow-Origin' 'https://1.nctu.cs';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+            add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
+
+            location /wsconnect {
+              proxy_pass http://localhost:8880;
+              proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection "upgrade";
+            }
+
+            location /wsdemo {
+              alias /var/www/wsdemo;
+              allow all;
+            }
+
+        - listen: "8080"
+          server_name: "1_ws.nctu.cs"
+          state: present
+          filename: "1_ws.nctu.cs_8080.conf"
+          extra_parameters: |-
+            location / {
+              proxy_pass http://localhost:18080;
+              proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection "upgrade";
+            }
+
+        - listen: "443 ssl http2"
+          server_name: "1.nctu.cs"
+          state: present
+          filename: "1.nctu.cs.conf"
+          extra_parameters: |-
+            ssl_certificate     {{ openssl_remote_private_dir }}/{{ openssl_name }}.crt;
+            ssl_certificate_key {{ openssl_remote_private_dir }}/{{ openssl_name }}.key;
+            # ssl_certificate     {{ openssl_remote_private_dir }}/1.nctu.cs.crt;
+            # ssl_certificate_key {{ openssl_remote_private_dir }}/1.nctu.cs.key;
+            ssl_protocols       TLSv1.1 TLSv1.2 TLSv1.3;
+            ssl_ciphers         ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+            # ssl_prefer_server_ciphers off;
+
+            location /wsconnect {
+              allow all;
+              proxy_pass http://localhost:8443;
+              # proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection "Upgrade";
+
+              proxy_set_header X-Forwarded-Proto $scheme;
+              proxy_set_header X-Forwarded-Port $server_port;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header Host $host;
+              proxy_read_timeout 86400;
+              proxy_buffering off;
             }
 
     - role: hanxhx.php
@@ -239,6 +299,14 @@
         echo -n {{ nginx_basic_auth_username }}: >> /usr/local/etc/nginx/.htpasswd
         echo {{ nginx_secret }} | openssl passwd -apr1 -stdin >> /usr/local/etc/nginx/.htpasswd
 
+    - name: Get websocketd processes
+      shell: "ps -a | grep -v grep | grep -w websocketd | awk '{print $1}'"
+      register: running_processes
+
+    - name: Kill websocketd processes
+      shell: "kill {{ item }}"
+      with_items: "{{ running_processes.stdout_lines }}"
+
     - name: Make html
       copy:
         dest: "{{ item.base }}/{{ item.name }}/index.html"
@@ -267,6 +335,53 @@
       copy:
         src: "{{ playbook_dir }}/files/hw/4/index.php"
         dest: /var/www/app/index.php
+
+    - name: Push ws html
+      copy:
+        src: "{{ playbook_dir }}/files/hw/4/index.html"
+        dest: /var/www/wsdemo/index.html
+
+    - name: Make websocketd
+      shell: |
+        fetch -o /tmp https://github.com/joewalnes/websocketd/releases/download/v0.4.1/websocketd-0.4.1-freebsd_amd64.zip
+        tar -zxf /tmp/websocketd-0.4.1-freebsd_amd64.zip -C /tmp
+        mv /tmp/websocketd /usr/local/bin/
+
+    - name: Make ws script
+      copy:
+        mode: "750"
+        dest: "{{ item.dest }}"
+        content: |
+          #!/usr/local/bin/bash
+          for ((COUNT = 1; COUNT <= 3; COUNT++)); do
+            # ping -c3 1.1.1.1 | awk -F '[:=]' 'NR>1&&NR<5 {print "{{ item.name }}:",substr($5,0,7)}'
+            ping -c1 1.1.1.1 | awk -F '[:=]' 'NR==2 {print "{{ item.name }}:",substr($5,0,7)}' && sleep 1
+          done
+      with_items:
+        - { name: ws8080, dest: /var/www/wsdemo/8080.sh }
+        - { name: ws, dest: /var/www/wsdemo/80.sh }
+        - { name: wss, dest: /var/www/wsdemo/443.sh }
+
+    - name: Make start ws script
+      copy:
+        mode: "755"
+        dest: /var/www/wsdemo/startws.sh
+        content: |
+          #!/usr/local/bin/bash
+          CDIR="$( cd "$(dirname "$0")" >/dev/null 2>&1 ; pwd -P )"
+          sh -c "sleep 1 && websocketd --port=18080 --address=localhost ${CDIR}/8080.sh" & jobs
+          sh -c "sleep 2 && websocketd --port=8880 --address=localhost ${CDIR}/80.sh" & jobs
+          sh -c "sleep 3 && websocketd --port=8443 --address=localhost ${CDIR}/443.sh" & jobs
+          # sh -c "sleep 3 && websocketd --devconsole --loglevel=debug --port=8443 --address=localhost ${CDIR}/443.sh" & jobs
+
+    # # nohup 會自動地停下來,原因待查. (其實寫 systemd unit 或 rc.d 腳本會更好)
+    # # 目前這部分就先使用手動啟動, 方法為 ` bash /var/www/wsdemo/startws.sh `
+    # - name: Up the websocketd http server
+    #   shell: nohup websocketd --port={{ item.port }} --address=localhost /var/www/wsdemo/{{ item.name }} &
+    #   with_items:
+    #     - { port: "18080", name: 8080.sh }
+    #     - { port: "8880", name: 80.sh }
+    #     - { port: "8443", name: 443.sh }
 
     - name: Download Wordpress
       shell: |+
